# telegram_chatgpt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  GEMINI.md  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml  pyproject.tomll  requirements-dev.txt  requirements.txt  run.py  setup.py
.github/workflows/: push_docker_image.yml
src/: __init__.py  constants.py  log_tools.py  web_server.py
src/config/: __init__.py  base.py
src/database/: __init__.py  migrations_runner.py  models.py
src/database/migrations/: 0001_wordle_tables.py
src/image_gen/: __init__.py  generator.py
src/open_ai/: __init__.py  chat_gpt.py
src/telegram/: bot.py
src/tg/: bot.py  run.py  utils.py
src/tg/handlers/: __init__.py  admin.py  callback.py  chat.py  image.py  web.py
src/tg/scripts/: load_history.py
tests/: conftest.py  test_database.py  test_handlers.py  test_open_ai.py  test_openai.py
web/: wordle.css  wordle.html  wordle.js
