[project]
name = "telegram-gpt-bot"
version = "0.0.1"
dependencies = [
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "anyio==3.6.2",
    "async-timeout==4.0.2",
    "attrs==22.2.0",
    "black==23.1.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "frozenlist==1.3.3",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==0.16.3",
    "httpx==0.23.3",
    "hyperframe==6.0.1",
    "idna==3.4",
    "isort==5.12.0",
    "multidict==6.0.4",
    "mypy-extensions==1.0.0",
    "openai==0.27.2",
    "packaging==23.0",
    "pathspec==0.11.1",
    "peewee==3.16.0",
    "platformdirs==3.1.1",
    "replicate==1.0.4",
    "python-telegram-bot==20.1",
    "requests==2.28.2",
    "rfc3986==1.5.0",
    "sniffio==1.3.0",
    "tomli==2.0.1",
    "tqdm==4.65.0",
    "urllib3==1.26.15",
    "yarl==1.8.2",
    "huggingface-hub==0.29.3",
]

[dependency-groups]
dev = [
    "pytest==7.0.1",
    "pytest-aiohttp==0.3.0",
    "pytest-cov==3.0.0",
    "pytest-freezegun==0.4.2",
    "pytest-lazy-fixture==0.6.3",
    "pytest-timeout==2.0.1",
]

[tool.uv]
package = false
