[project]
name = "telegram-gpt-bot"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "anyio==3.6.2",
    "async-timeout==4.0.2",
    "attrs==22.2.0",
    "black==23.1.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "frozenlist==1.3.3",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==0.16.3",
    "httpx==0.23.3",
    "hyperframe==6.0.1",
    "idna==3.4",
    "isort==5.12.0",
    "multidict==6.0.4",
    "mypy-extensions==1.0.0",
    "openai==0.27.2",
    "packaging==23.0",
    "pathspec==0.11.1",
    "peewee==3.16.0",
    "platformdirs==3.1.1",
    "replicate==1.0.4",
    "python-telegram-bot==20.1",
    "requests==2.28.2",
    "rfc3986==1.5.0",
    "sniffio==1.3.0",
    "tomli==2.0.1",
    "tqdm==4.65.0",
    "urllib3==1.26.15",
    "yarl==1.8.2",
    "huggingface-hub==0.29.3",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "ruff==0.3.0",
    "pre-commit==3.6.2",
    "telethon>=1.40.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-aiohttp==0.3.0",
    "pytest-cov==4.1.0",
    "pytest-freezegun==0.4.2",
    "pytest-lazy-fixture==0.6.3",
    "pytest-timeout==2.0.1",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "ruff==0.3.0",
    "pre-commit==3.6.2"
]

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = [
    "E", # pyflakes
    "F", # pycodestyle errors
    "W", # pycodestyle warnings
    "UP", # pyupgrade
    "I", # isort
    "C4", # flake8-comprehensions
    # pytest
    "PT018", # Assertion should be broken down into multiple parts
    "PT022", # No teardown in fixture {name}, use return instead of yield

    "T10", # flake8-debugger
    "SIM", # flake8-simplify
    "ISC", # flake8-implicit-str-concat
    "FA", # flake8-future-annotations
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RET", # flake8-return
    "FLY", # flynt
    "FURB", # refurb
]
lint.ignore = [
    "RET502", # Do not explicitly return None in function
    "E203", # Black cjrrect format whitespaces
    "F405", # May be undefined, or defined from star imports
]
lint.unfixable = ["E712"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.uv]
package = false
